# PatternSeeker

./: .gitignore  CMakeLists.txt  PatternSeeker.hpp  README.md
tests/: CMakeLists.txt  test_main.cpp
